--- a/modulefour/index.html
+++ b/modulefour/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
-  <script src="modulefour/SpeakHello.js"></script>
-  <script src="modulefour/SpeakGoodBye.js"></script>
-  <script src="modulefour/script.js"></script>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
+  <div>
+    <p>Right-click and click Inspect. Then check Console to see the finished product.</p>
+  </div>
 </body>
 </html>
